--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,13 @@
 /* your code */
+table{
+	border:1px solid black;
+	border-radius:6px;
+}
+tr:nth-child(even) {
+  background-color: grey;
+}
+
+thead{
+	background-color:#34aadc;
+	
+}
